--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,16 @@
-/* styles go here */
+.inputs-block {
+  margin-bottom: 20px;
+}
+
+.favCar {
+  overflow-y: hidden;
+}
+
+.input-row {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.input-row:last-child {
+  margin-bottom: 0;
+}
